--- a/css/styles.css
+++ b/css/styles.css
@@ -13,31 +13,58 @@ h1{
 /*luego en el css los que hago es llamar a ese selector class con un . */
 
 
-.lista1{
-    color: rgb(117, 7, 180);
 
-}
 
 h2{ 
     font-size: 30px;
     text-decoration: underline;
-
 }
+
 h3{
     text-decoration: underline;
-
 }
 
 body{
     background-color: rgb(196, 196, 196);
+    background-image: url(/imagenes/fondo2.jpg);
+    background-repeat: inherit;
+    background-attachment: fixed;
+    background-position: right;
+    background-size: 400px;
+    background-blend-mode:color-burn;
 }
 .img1{
-    width: 300px;
-    height: 300px;
+  width: 300px;
+  height: 300px;
     
 }
 
 .img2{
-    width: 1000px;
-    height: 500px; 
+  width: 1000px;
+  height: 500px; 
+}
+
+.lista1{
+  color: rgb(117, 7, 180);
+
+}
+.icono-facebook{
+  width: 50px;
+  height: 50px;
+}
+.icono-instagram{
+  width: 50px;
+  height: 50px;
+}
+.icono-youtube{
+  width: 50px;
+  height: 50px;
+}
+
+.icono-whatsapp{
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  
+
 }
